fixed preview - now all articles are visible

--- a/dlrsstoemail/static/style.css
+++ b/dlrsstoemail/static/style.css
@@ -9,7 +9,14 @@ body {
     border: 1px dashed gray;
 }
 
+#table{
+    padding: 10px;
+    width: 50%;
+}
+
 table {
+    margin: auto;
+    padding: 10px;
     width: 50%;
     border: 1px solid black;
 }
